// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {}
    }
  }
}"
`;

exports[`queue with a consumer function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Received \\" + event.name);
        }
async function $sqsEventWrapper($cap, event) {
  for (const record of event.Records ?? []) {
    await $proc($cap, JSON.parse(record.body));
  }
}
exports.handler = async function(event) {
  return await $sqsEventWrapper($cap, event);
};"
`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_IamRole_A8C7F262\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_IamRolePolicy_28329761\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Queue_OnMessage03929de99b90eb35_IamRole_A8C7F262.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_IamRolePolicyAttachment_C77A9522\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Queue_OnMessage03929de99b90eb35_IamRole_A8C7F262.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_Queue_OnMessage03929de99b90eb35_8152C7F6.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_8152C7F6\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"OnMessage-03929de99b90eb35\\"
          }
        },
        \\"function_name\\": \\"OnMessage-03929de99b90eb35\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Queue_OnMessage03929de99b90eb35_IamRole_A8C7F262.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Queue_OnMessage03929de99b90eb35_Bucket_CDED2E16.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Queue_OnMessage03929de99b90eb35_S3Object_E680E89C.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_Bucket_CDED2E16\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Queue_OnMessage03929de99b90eb35_S3Object_E680E89C\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Queue_OnMessage03929de99b90eb35_Bucket_CDED2E16.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;
